--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,26 +1,43 @@
+@keyframes drop{
+    from {top: 0%; margin-top: 0%;}
+	50% {top: 50%; margin-top: -13%;}
+	75% {top: 55%;}
+	to {top: 50%}
+}
+
 html{
 	width: 100%; height: 100%;
 }
 
 body{
+	margin: 0;
 	width: 100%; height: 100%;
 }
 
 .open_button, .manage_button, .password_button{
-	width: 30%;
-	border-radius: 50%;
+	width: 26vw;
+	height: 26vw;
+	top: 50%;
+	margin-top: -13%;
 
+	border-radius: 50%;
 	position: absolute;
 }
 
 .open_button{
+	left: 5%;
 	background-color: red;
 }
 
 .manage_button{
+	animation: 1s drop forwards;
+
+	left: 50%;
+	margin-left: -13vw;
 	background-color: blue;
 }
 
 .password_button{
+	right: 5%;
 	background-color: yellow;
 }
