--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,9 +1,46 @@
-@keyframes drop{
-    from {top: 0%; margin-top: 0%;}
-	50% {top: 50%; margin-top: -13%;}
-	75% {top: 55%;}
-	to {top: 50%}
+@keyframes bounceInDown {
+	from,
+	60%,
+	75%,
+	90%,
+	to {
+	  -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+	  animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+	}
+  
+	0% {
+	  width: 5vw;
+	  height: 5vw;
+	  opacity: 0;
+	  -webkit-transform: translate3d(0, -3000px, 0);
+	  transform: translate3d(0, -3000px, 0);
+	}
+  
+	60% {
+	  opacity: 1;
+	  -webkit-transform: translate3d(0, 25px, 0);
+	  transform: translate3d(0, 25px, 0);
+	}
+  
+	75% {
+	  -webkit-transform: translate3d(0, -10px, 0);
+	  transform: translate3d(0, -10px, 0);
+	}
+  
+	90% {
+	  -webkit-transform: translate3d(0, 5px, 0);
+	  transform: translate3d(0, 5px, 0);
+	}
+  
+	to {
+	  width: 26vw;
+	  height: 26vw;
+
+	  -webkit-transform: translate3d(0, 0, 0);
+	  transform: translate3d(0, 0, 0);
+	}
 }
+
 
 html{
 	width: 100%; height: 100%;
@@ -30,7 +67,7 @@ body{
 }
 
 .manage_button{
-	animation: 1s drop forwards;
+	animation:1s bounceInDown;
 
 	left: 50%;
 	margin-left: -13vw;
