--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,47 +1,3 @@
-@keyframes bounceInDown {
-	from,
-	60%,
-	75%,
-	90%,
-	to {
-	  -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-	  animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-	}
-  
-	0% {
-	  width: 5vw;
-	  height: 5vw;
-	  opacity: 0;
-	  -webkit-transform: translate3d(0, -3000px, 0);
-	  transform: translate3d(0, -3000px, 0);
-	}
-  
-	60% {
-	  opacity: 1;
-	  -webkit-transform: translate3d(0, 25px, 0);
-	  transform: translate3d(0, 25px, 0);
-	}
-  
-	75% {
-	  -webkit-transform: translate3d(0, -10px, 0);
-	  transform: translate3d(0, -10px, 0);
-	}
-  
-	90% {
-	  -webkit-transform: translate3d(0, 5px, 0);
-	  transform: translate3d(0, 5px, 0);
-	}
-  
-	to {
-	  width: 26vw;
-	  height: 26vw;
-
-	  -webkit-transform: translate3d(0, 0, 0);
-	  transform: translate3d(0, 0, 0);
-	}
-}
-
-
 html{
 	width: 100%; height: 100%;
 }
@@ -49,32 +5,47 @@ html{
 body{
 	margin: 0;
 	width: 100%; height: 100%;
+
+	background: #bc4e9c;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #f80759, #bc4e9c);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #f80759, #bc4e9c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
 .open_button, .manage_button, .password_button{
+	transform: translateZ(0);
 	width: 26vw;
 	height: 26vw;
+
 	top: 50%;
 	margin-top: -13%;
 
 	border-radius: 50%;
 	position: absolute;
+
+	background-color: whitesmoke;
+}
+
+.open_button, .password_button{
+	opacity: 0;
 }
 
 .open_button{
-	left: 5%;
-	background-color: red;
+	z-index: -1;
+	left: 50%;
+	margin-left: -13%;
 }
 
 .manage_button{
-	animation:1s bounceInDown;
-
+	z-index: 0;
 	left: 50%;
-	margin-left: -13vw;
-	background-color: blue;
+	margin-left: -13%;
+
+	opacity: .8;
 }
 
 .password_button{
-	right: 5%;
-	background-color: yellow;
+	z-index: -1;
+	right: 50%;
+	margin-right: -13vw;
 }
