--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,7 +9,6 @@ body{
 	background: #bc4e9c;  /* fallback for old browsers */
 	background: -webkit-linear-gradient(to right, #f80759, #bc4e9c);  /* Chrome 10-25, Safari 5.1-6 */
 	background: linear-gradient(to right, #f80759, #bc4e9c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
 }
 
 .open_button, .manage_button, .password_button{
@@ -37,11 +36,12 @@ body{
 }
 
 .manage_button{
+	box-shadow: 0 1px 2px rgba(255,0,0,0.6);
 	z-index: 0;
 	left: 50%;
 	margin-left: -13%;
 
-	opacity: .8;
+	opacity: .6;
 }
 
 .password_button{
