--- a/src/css/index.css
+++ b/src/css/index.css
@@ -25,8 +25,9 @@ body{
 
 	background-color: whitesmoke;
 
-	box-shadow: 0 0 20px rgba(0,255,0,.6), inset 0 0 10px rgba(0,255,0,.4), 0 1px 0 #6f6;
+	box-shadow: inset 0 0 10px 5px rgba(255, 175, 189, 0.6), 0 0 10px 5px rgba(255, 195, 160, 0.6)
 }
+
 
 .open_button, .password_button{
 	z-index: -1;
