--- a/src/css/font.css
+++ b/src/css/font.css
@@ -3,7 +3,7 @@
     src: url("../font/Champagne & Limousines Bold.ttf");
 }
 
-.open_button, .manage_button, .password_button{
+span{
     font-family: BtnFont;
-    font-size: 10em;
+    font-size: 3vw;
 }
