--- a/src/css/index.css
+++ b/src/css/index.css
@@ -20,6 +20,8 @@ span{
 
 	left: 0; right: 0; top: 0; bottom: 0;
 	margin: auto;
+
+	opacity: 0;
 }
 
 .open_button, .manage_button, .password_button{
@@ -38,7 +40,6 @@ span{
 
 	box-shadow: inset 0 0 10px 5px rgba(255, 175, 189, 0.6), 0 0 10px 5px rgba(255, 195, 160, 0.6)
 }
-
 
 .open_button, .password_button{
 	z-index: -1;
